--- a/14-electron/complete/package.json
+++ b/14-electron/complete/package.json
@@ -34,5 +34,9 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "electron": "^13.1.7",
+    "electron-is-dev": "^2.0.0"
   }
 }
