--- a/14-electron/complete/package.json
+++ b/14-electron/complete/package.json
@@ -1,6 +1,7 @@
 {
   "name": "complete",
   "version": "0.1.0",
+  "main": "public/electron.js",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.14.1",
@@ -15,7 +16,9 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "dev": "concurrently -k \"Browser=none npm start\" \"npm:electron\"",
+    "electron": "wait-on tcp:3000 && electron ."
   },
   "eslintConfig": {
     "extends": [
@@ -36,7 +39,9 @@
     ]
   },
   "devDependencies": {
+    "concurrently": "^6.2.0",
     "electron": "^13.1.7",
-    "electron-is-dev": "^2.0.0"
+    "electron-is-dev": "^2.0.0",
+    "wait-on": "^6.0.0"
   }
 }
