--- a/15-dashboard/complete/package.json
+++ b/15-dashboard/complete/package.json
@@ -6,8 +6,11 @@
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
+    "chartjs": "^0.3.24",
+    "chokidar": "^3.5.2",
     "framer-motion": "^4.1.17",
     "react": "^17.0.2",
+    "react-chartjs-2": "^3.0.4",
     "react-dom": "^17.0.2",
     "react-icons": "^4.2.0",
     "react-router-dom": "^5.2.0",
